# EInk-Calendar

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  compile_commands.json  controller.py  dev-requirements.txt  diagram.fzz  main.py  mypy.ini  requirements.txt
model/: calendar.py  events.py  weather.py
resources/: weathericons.xml
src/: main.cc  window.cc  window.h
test/: test.ini  test_config.py
utils/: config_generator.py
view/: window.py
view/hardware/: button.py  button_and_led.py  button_led.py  epd7in5.py  epdconfig.py  mock.py
view/widgets/: alignments.py  calendar.py  calender.py  event.py  panel.py  text.py  weather.py  weather_icon_lookup.py  widget_base.py  window.py
widgets/: calender.py  event.py  panel.py  text.py  weather.py  weather_icon_lookup.py  widget_base.py
